# multicooker

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  HOWTO.md  LICENSE  README.md  README.ru.md  SECURITY.md  pyproject.toml
docs/: add-flavor.md  auth.md  control-plane-integration.md  control-plane-readiness.md  design-notes.md  implementation-status.md  lifecycle.md  orchestration.md  pitfalls.md  security.md  setup-new-cook.md  todo.md
multicooker/: __init__.py  add_participant.py  api.py  archive_cmd.py  artifacts.py  base_images.py  brief_schema.py  cancel_cmd.py  chef.py  clean.py  cli.py  compose_render.py  compose_runner.py  consult.py  cook.py  creds.py  diff_rounds.py  doctor.py  host_profile.py  judge.py  judging_policy.py  lint.py  metrics.py  new_cook.py  project.py  prune.py  refine.py  rejudge.py  report.py  resume_cmd.py  runner_common.py  state.py  status_cmd.py  tail_cmd.py
multivarka/: add_participant.py  base_images.py  brief_schema.py  clean.py  cli.py  compose_render.py  compose_runner.py  cook.py  creds.py  diff_rounds.py  doctor.py  host_runner.py  judge.py  new_cook.py  refine.py  rejudge.py  report.py  runner_common.py
tests/: test_add_participant.py  test_anonymize.py  test_api.py  test_archive.py  test_artifacts.py  test_brief_schema.py  test_cancel_cmd.py  test_compose_hardening.py  test_compose_limits.py  test_consult.py  test_creds_claude_shape.py  test_detect_rate_limit.py  test_diff_rounds.py  test_host_profile.py  test_integration_dummy.py  test_judging_policy.py  test_lint.py  test_metrics.py  test_outputs.py  test_project.py  (+10 more)
(+85 files in other folders)
